MInor text fix increase line spacing

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -248,7 +248,7 @@ section{
 }
 
 aside.parallax{
-	font: 400 25px/25px "Hepta Slab", Arial, sans-serif;
+	font: 400 25px/30px "Hepta Slab", Arial, sans-serif;
 	float: left;
 	padding-top: 30%;
 	padding-left: 8%;
